# playlists-creator

./: .dockerignore  .env  .gcloudignore  .gitignore  Aptfile  Dockerfile  Procfile  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deployment.yaml  deployment.yml  verify.yaml  verify.yml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  Navigator.jsx  consts.js
client/src/components/: About.jsx  Checkbox.jsx  (+39 more)
server/: access_token_generator.py  app.py  application_builder.py  component_factory.py  data_filterer.py  parameters_transformer.py  playlists_creator.py  playlists_generator.py  query_condition.py  utils.py
server/app_resources/: configuration_resource.py  features_names_resource.py  min_max_values_resource.py  possible_values_resource.py  prompt_resource.py  request_body_resource.py
server/consts/: api_consts.py  app_consts.py  audio_features_consts.py  cases_consts.py  data_consts.py  database_consts.py  env_consts.py  general_consts.py  image_consts.py  openai_consts.py  path_consts.py  prompt_consts.py  typing_consts.py
server/controllers/: api.py  api_routes.py  base_content_controller.py  case_controller.py  case_progress_controller.py  configuration_controller.py  features_descriptions_controller.py  features_names_controller.py  health_controller.py  min_max_values_controller.py  photo_controller.py  playlist_controller.py  possible_values_controller.py  prompt_controller.py  request_body_controller.py  server_routes.py
server/data/: case_status.py  chat_completions_request.py  column_details.py  column_group.py  column_z_score_metadata.py  database_client.py  playlist_creation_config.py  playlist_creation_context.py  playlist_resources.py  prompt_component.py  prompt_details.py  query_condition.py  track_details.py  track_features.py  z_score_description.py
server/database/: database_client.py
server/logic/: access_token_generator.py  cases_manager.py  columns_possible_values_querier.py  configuration_photo_prompt_creator.py  data_filterer.py  database_client.py  default_filter_params_generator.py  features_descriptions_manager.py  features_names_generator.py  openai_adapter.py  parameters_transformer.py  playlist_cover_photo_creator.py  playlist_details_serializer.py  playlists_creator.py  playlists_generator.py  playlists_merger.py  prompt_details_tracks_selector.py  similarity_scores_computer.py  spotify_tracks_collector.py  z_scores_metadata_creator.py
server/middlewares/: authentication_middleware.py
server/resources/: columns_details_descriptions.json
server/tools/: authenticator.py  cached_token_generator.py  case_progress_reporter.py  logging.py  response_factory.py  search_result_artist_entity_extractor.py  spotify_session_creator.py
server/utils/: data_utils.py  general_utils.py  image_utils.py  os_utils.py  postgres_utils.py  regex_utils.py  spotify_utils.py  statistics_utils.py  string_utils.py
src/: App.js  consts.js
src/components/: MinDistanceRangeSlider.jsx  MultiSelectChip.css  MultiSelectChip.jsx  MultiSelectDropdown.jsx  RequestBody.jsx
tests/: conftest.py
tests/server/: conftest.py  consts.py  utils.py
(+126 files in other folders)
