[tool.poetry]
name = "playlists-creator"
version = "0.1.0"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aiohttp = "3.8.4"
pandas = "1.5.3"
gunicorn = "20.1.0"
numpy = "1.24.3"
opencv-python = "4.7.0.72"
pytesseract = "0.3.10"
tqdm = "4.65.0"
asyncio-pool = "0.6.0"
google-api-python-client = "2.87.0" # TODO: Delete as soon as database is fully integrated
scikit-learn = "1.2.2"
fastapi = "0.101.0"
starlette = "0.27.0"
python-multipart = "0.0.6"
uvicorn = "0.20.0"
async-lru = "2.0.4"
genie-datastores = {git = "https://github.com/nirgodin/genie-datastores.git", rev = "12c19ea2"}
spotipyio = {git = "https://github.com/nirgodin/spotipyio.git", rev = "c5431f44"}
async-cache = "1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
